--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ workflows:
   version: 2
   dist-compile:
     jobs:
-      - compile:
+      - compile
       - link:
           requires: 
             - compile
