--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,16 @@ jobs:
     steps:
       - checkout
       #split all c files based on the index ID we're running on, pass subset to gcc compile
-      - run: circleci tests glob "**/*.c" | circleci tests split --split-by=filesize | xargs gcc -c 
+      - run: circleci tests glob "**/*.c" | circleci tests split --split-by=timings > file_list
+      - run: |
+          while read LINE;do
+            echo "Compiling" $LINE
+            TIME=`gcc -ftime-report -c $LINE 2>&1 | grep TOTAL | tr -s " " | cut -d" " -f6`
+            echo "<testcase classname=\"$LINE\" name=\"$LINE\" time=\"$TIME\"/>" >>timing_body.xml
+          done<file_list
+      - run: mkdir gcc-timings && cat timing_head.xml timing_body.xml timing_foot.xml > gcc-timings/timing.xml
+      - store_test_results:
+          path: gcc-timings
       # move compiled files to specific folder and persist to workspace
       - run: mkdir output && mv *.o output
       - persist_to_workspace:
