fix path to xml files

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
             TIME=`gcc -ftime-report -c $LINE 2>&1 | grep TOTAL | tr -s " " | cut -d" " -f6`
             echo "<testcase classname=\"$LINE\" name=\"$LINE\" time=\"$TIME\"/>" >>timing_body.xml
           done<file_list
-      - run: mkdir gcc-timings && cat timing_head.xml timing_body.xml timing_foot.xml > gcc-timings/timing.xml
+      - run: mkdir gcc-timings && cat .circleci/timing_head.xml timing_body.xml .circleci/timing_foot.xml > gcc-timings/timing.xml
       - store_test_results:
           path: gcc-timings
       # move compiled files to specific folder and persist to workspace
