fake timing data

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,7 @@ jobs:
       - image: gcc:8.2
     steps:
       - checkout
-      - run: apt-get update && apt-get install -y jq
-      - run: echo "previous timings"  && cat $CIRCLE_INTERNAL_TASK_DATA/circle-test-results/results.json | jq '.'
+      - run: cp .circleci/timing.json $CIRCLE_INTERNAL_TASK_DATA/circle-test-results/results.json
       #split all c files based on the index ID we're running on, pass subset to gcc compile
       - run: circleci tests glob "**/*.c" | circleci tests split --split-by=timings > file_list
       - run: |
@@ -37,6 +36,9 @@ jobs:
           root: output
           paths:
             - "*.o"
+      # these stpes are debugging only, the timing in this file should align with how files were segmented
+      - run: apt-get update && apt-get install -y jq
+      - run: echo "previous timings"  && cat $CIRCLE_INTERNAL_TASK_DATA/circle-test-results/results.json | jq '.'
 
   link:
     docker:
